------------------------------------------------------------------------------------------ 
----                                  OpenMS 1.9                                      ---- 
------------------------------------------------------------------------------------------ 


TOPP tools: 
 
UTIL tools: 
	 
OpenMS library improvements: 
	 
TOPPView improvements:
-MODIFIED:
  - ConsensusFeatures can now be colored using MetaValues
  - Better grid line drawing/calculation, extracted AxisPainter class
  - IdentificationView:
    - added automatic labeling with peptide fragment sequence
    - theoretical spectrum is now hidden by default (labeling contains relevant information for most use cases)
    - automatic zoom to measured MS2 data range
TOPPAS improvements: 
	- TOPPAS now used the QT-Webkit framework to allow for interactive download of preconfigured TOPPAS pipelines.
	 
Changes to the Build System: 
	- TOPPAS now requires Qt's Webkit library
	- Use CMAKE_BUILD_TYPE instead of OPENMS_BUILD_TYPE
        - Removed ANDIMS and dependencies	
	
Fixed Issues: 
	 
Detailed list of changes to specific OpenMS classes:
- MODIFIED:
  - AASequence: removed AASequence(ConstIterator, ConstIterator) constructor, since it ignored Terminal Modifications; since there was no way to enable correct construction from two Iterators, we removed it
  


------------------------------------------------------------------------------------------
----                                  OpenMS 1.8                                      ----
------------------------------------------------------------------------------------------

TOPP tools:
- MODIFIED:
  - MapAligner: separated data extraction from transformation modelling - this allows to combine different algorithms and models; new option "invert"; reworked parameters (please see the MapAligner documentation and update your INI files)