@@ -29,7 +29,6 @@
 #include <OpenMS/FILTERING/SMOOTHING/SavitzkyGolayFilter.h>
 #include <OpenMS/FORMAT/MzMLFile.h>
 #include <OpenMS/KERNEL/MSExperiment.h>
-#include <OpenMS/FILTERING/SMOOTHING/GaussFilter.h>
 #include <OpenMS/APPLICATIONS/TOPPBase.h>
 #include <OpenMS/FORMAT/PeakTypeEstimator.h>
 #include <OpenMS/DATASTRUCTURES/StringList.h>
@@ -42,9 +41,9 @@ using namespace std;
 //-------------------------------------------------------------
 
 /**
-	@page TOPP_NoiseFilter NoiseFilter
+	@page TOPP_NoiseFilterSGolay NoiseFilterSGolay
 
-	@brief  Executes a Savitzky Golay or a Gaussian filter to reduce the noise in an MS experiment.
+	@brief  Executes a Savitzky Golay filter to reduce the noise in an MS experiment.
 
 <CENTER>
 	<table>
@@ -71,34 +70,25 @@ using namespace std;
 	(typically quadratic or quartic) (see A. Savitzky and M. J. E. Golay,
 	''Smoothing and Differentiation of Data by Simplified Least Squares Procedures'').
 
-	The Gaussian is a peak area preserving low-pass filter and is characterized by narrow bandwidths,
-	sharp cutoffs, and low passband ripple.
-
-
 	@note The Savitzky Golay filter works only on uniform data (to generate equally spaced data use the @ref TOPP_Resampler tool).
-	      The Gaussian filter works for uniform as well as for non-uniform data.
 
 	<B>The command line parameters of this tool are:</B>
 	@verbinclude TOPP_NoiseFilter.cli
 
 	<B>The algorithm parameters for the Savitzky Golay filter are:</B>
 @htmlinclude OpenMS_SavitzkyGolayFilter.parameters
-
-	<B>The algorithm parameters for the Gaussian filter are:</B>
-@htmlinclude OpenMS_GaussFilter.parameters
-
 */
 
 // We do not want this class to show up in the docu:
 /// @cond TOPPCLASSES
 
 
-class TOPPNoiseFilter
+class TOPPNoiseFilterSGolay
       : public TOPPBase
 {
   public:
-    TOPPNoiseFilter()
-        : TOPPBase("NoiseFilter","Removes noise from profile spectra by using different smoothing techniques.")
+    TOPPNoiseFilterSGolay()
+        : TOPPBase("NoiseFilterSGolay","Removes noise from profile spectra by using a Savitzky Golay filter.")
     {
     }
 
@@ -108,31 +98,16 @@ class TOPPNoiseFilter
 			setValidFormats_("in",StringList::create("mzML"));
 			registerOutputFile_("out","<file>","","output raw data file ");
 	  	setValidFormats_("out",StringList::create("mzML"));
-      registerStringOption_("type","<type>","","smoothing filter type", true);
-			setValidStrings_("type", StringList::create("sgolay,gaussian"));
 			addEmptyLine_();
 	  	addText_("Parameters for the algorithms can be given in the INI file only.");
 			addEmptyLine_();
-			addText_("Note: The Savitzky Golay filter works only on uniform data (to generate equally spaced data use the Resampler tool).\n"
-      				 "      The Gaussian filter works for uniform as well as for non-uniform data.");
+			addText_("Note: The Savitzky Golay filter works only on uniform data (to generate equally spaced data use the Resampler tool).");
     	registerSubsection_("algorithm","Algorithm parameters section");
     }
 
     Param getSubsectionDefaults_(const String& /*section*/) const
     {
-			String type = getStringOption_("type");
-			Param tmp;
-
-			if (type == "sgolay")
-      {
-        tmp = SavitzkyGolayFilter().getDefaults();
-      }
-      else if (type == "gaussian")
-      {
-        tmp = GaussFilter().getDefaults();
-      }
-
-      return tmp;
+      return SavitzkyGolayFilter().getDefaults();
     }
 
     ExitCodes main_(int , const char**)
@@ -142,7 +117,6 @@ class TOPPNoiseFilter
       //-------------------------------------------------------------
       String in = getStringOption_("in");
       String out = getStringOption_("out");
-      String type = getStringOption_("type");
 
       //-------------------------------------------------------------
       // loading input
@@ -179,28 +153,11 @@ class TOPPNoiseFilter
       //-------------------------------------------------------------
     	Param filter_param = getParam_().copy("algorithm:",true);
 			writeDebug_("Parameters passed to filter", filter_param,3);
-      if (type == "sgolay")
-      {
-  			SavitzkyGolayFilter sgolay;
-        sgolay.setLogType(log_type_);
-  			sgolay.setParameters( filter_param );
-				sgolay.filterExperiment(exp);
-      }
-      else if (type == "gaussian")
-      {
-        GaussFilter gauss;
-        gauss.setLogType(log_type_);
-        gauss.setParameters(filter_param);
-        try
-        {
-          gauss.filterExperiment(exp);
-        }
-        catch(Exception::IllegalArgument& e)
-        {
-        	writeLog_(String("Error: ") + e.getMessage()) ;
-        	return INCOMPATIBLE_INPUT_DATA;
-        }
-      }
+
+      SavitzkyGolayFilter sgolay;
+      sgolay.setLogType(log_type_);
+      sgolay.setParameters( filter_param );
+      sgolay.filterExperiment(exp);
 
       //-------------------------------------------------------------
       // writing output
@@ -218,7 +175,7 @@ class TOPPNoiseFilter
 
 int main( int argc, const char** argv )
 {
-  TOPPNoiseFilter tool;
+  TOPPNoiseFilterSGolay tool;
   return tool.main(argc,argv);
 }
 
