@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <PARAMETERS version="1.2" xsi:noNamespaceSchemaLocation="http://open-ms.sourceforge.net/schemas/Param_1_2.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <NODE name="NoiseFilter" description="">
+  <NODE name="NoiseFilterGaussian" description="">
     <NODE name="1" description="Instance '1' section for 'NoiseFilter'">
       <ITEM name="in" value="" type="string" description="input raw data file (valid formats: 'mzData')" />
       <ITEM name="out" value="" type="string" description="output raw data file (valid formats: 'mzData')" />
-      <ITEM name="type" value="gaussian" type="string" description="smoothing filter type" restrictions="sgolay,gaussian" />
       <ITEM name="log" value="TOPP.log" type="string" description="Location of the log file" />
       <ITEM name="debug" value="0" type="int" description="Sets the debug level" />
       <ITEM name="no_progress" value="false" type="string" description="Disables progress logging to command line" restrictions="true,false" />
